# Fortune_wheel

./: Animations.cpp  Animations.h  Answer_questions.cpp  Answer_questions.h  CMakeLists.txt  basic_questions.json  game_preparation.cpp  game_preparation.h  main.cpp  pick_from_json.cpp  pick_from_json.h  question_pick_json.cpp  question_pick_json.h  random.cpp  random.h  show_question.cpp  show_question.h  timer.cpp  timer.h  wheel_spin.cpp  wheel_spin.h
Assets/: Fortune_wheel_game_diagram.csv
Questions/: advanced_questions.json  basic_questions.json
